datasets/dataset_txt/mitmproxy/mitmproxy_814.txt
theSoenke commented on 28 Dec 2016
Steps to reproduce the problem:
Running mitmproxy results in this error. I'm using cssutils 1.0.1
  File "/usr/bin/mitmproxy", line 9, in <module>
    load_entry_point('mitmproxy==1.0.0', 'console_scripts', 'mitmproxy')()
  File "/usr/lib/python3.5/site-packages/mitmproxy/tools/main.py", line 58, in mitmproxy
    from mitmproxy.tools import console
  File "/usr/lib/python3.5/site-packages/mitmproxy/tools/console/__init__.py", line 1, in <module>
    from mitmproxy.tools.console import master
  File "/usr/lib/python3.5/site-packages/mitmproxy/tools/console/master.py", line 25, in <module>
    from mitmproxy.tools.console import flowview
  File "/usr/lib/python3.5/site-packages/mitmproxy/tools/console/flowview.py", line 9, in <module>
    from mitmproxy import contentviews
  File "/usr/lib/python3.5/site-packages/mitmproxy/contentviews/__init__.py", line 24, in <module>
    from . import (
  File "/usr/lib/python3.5/site-packages/mitmproxy/contentviews/css.py", line 3, in <module>
    import cssutils
  File "/usr/lib/python3.5/site-packages/cssutils/__init__.py", line 321
    except xml.dom.HierarchyRequestErr, e:
                                      ^
SyntaxError: invalid syntax
System information
Linux
Python 3.5.2
mitmproxy: 1.0
Not sure whether this is an issue with mitmproxy or just cssutils